plugins {
    id 'java'
}

java{
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

// 프로젝트에서 사용할 의존성(라이브러리) 명시 블록
// +) 의존성 업데이트 시 반드시 Gradle 리로드(refresh)가 필수
dependencies {
    // implementation: 컴파일 + 런다임 모두 포함하는 설정
    // cf) 롬복은 런타임에 필요한 라이브러리 X - 컴파일 시점에서만 필요 O

    // compileOnly: 컴파일 시점에만 필요한 라이브러리 임을 명시
    // annotationProcessor: 컴파일 시 어노테이션을 기반으로 코드 생성할 때 사용
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}